# fast-link-extractor

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
docs/: api.rst  conf.py  contributing.rst  index.rst  requirements.txt  usage.rst
docs/_static/css/: custom.css
src/: fast_link_extractor.py
src/fast_link_extractor/: fast_link_extractor.py
tests/: test_fle.py
